# selfheal

./: .env.example  .gitignore  AI_HANDOVER_v8.md  AI_HANDOVER_v9.md  CHANGELOG.md  CLAUDE.md  HANDOVER.md  Jenkinsfile  LICENSE  Makefile  Makefile.ps1  README.md  _test_result.txt  dashboard.html  dry_run_output.txt  dry_run_test.json  full_e2e_out.txt  full_test_final.txt  full_test_final2.txt  full_test_output.txt  full_test_output2.txt  make.bat  pyproject.toml  pytest.ini  runtests.py  selfheal.example.yaml  test_e2e_fail.txt  test_e2e_out.txt  test_new_features.txt  test_output.txt  test_output_e2e.txt  test_output_new.txt  test_p3_output.txt  test_patch_exp.txt
.claude/: settings.json
.github/workflows/: selfheal.yml
docs/: PRD.md
patches/: _generic.py.j2
patches/config/: default.py.j2
patches/network/: default.py.j2
patches/type/: default.py.j2
src/selfheal/: __init__.py  __main__.py  cli.py  config.py  engine.py  events.py  registry.py
src/selfheal/cli/: __init__.py  apply.py  backups.py  batch.py  classify.py  cleanup.py  dashboard.py  init.py  metrics.py  patch.py  (+5 more)
tests/: conftest.py  test_applier.py  test_benchmark.py  test_cache.py  test_cli.py  test_config_advanced.py  test_config_full.py  test_core.py  test_diff_parser.py  test_docker_validator.py  test_engine.py  test_engine_full.py  test_engine_plugin_integration.py  test_experience.py  test_hooks.py  test_hybrid_classifier.py  test_integration_full.py  test_llm_integration.py  test_llm_vcr.py  test_metrics.py  test_pipeline_e2e.py  test_pipeline_skip_severity.py  test_plugin_loader.py  test_plugin_sandbox.py  test_plugin_watcher.py  test_registry.py  test_reporters.py  test_template_patcher.py  test_validate_stage.py
tests/vcr_cassettes/: .gitkeep
(+81 files in other folders)
